--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,20 @@ body {
 	font-family: 'Bangers', cursive;
 	color: #333;
 }
+
+#root {
+	display: flex;
+	justify-content: center
+}
+
+.main {
+	padding: 50px;
+	border: 1px solid black;
+	width: 550px;
+}
+
+@media only screen and (max-device-width: 480px) {
+	.main {
+		width: 100%;
+	}
+}
