--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@ body {
 .login {
 	display:flex;
 	flex-direction:column;
-	padding-top:100px;
+	padding-top:50px;
 }
 
 .login-row {
@@ -48,6 +48,11 @@ body {
 	padding: 10px;
 	font-size: 2rem;
 	margin-right: 50px;
+}
+
+.login-text-div {
+	display: flex;
+	align-items: flex-end;
 }
 
 @media only screen and (max-device-width: 480px) {
