--- a/src/app.css
+++ b/src/app.css
@@ -53,13 +53,21 @@ body {
 .login-row_icolor {
 	flex: 1;
     border-radius: 5px;
-    margin: 1px;
+	margin: 1px;
 }
 
-@keyframes icolor-accept {
-	from { background-color: white; }
-	to {background-color: #0ca00c; }
+.icolor-accept {
+	animation-name: icolor-accept;
+	animation-duration: 1.5s;
+	animation-fill-mode: forwards;
 }
+.icolor-reject {
+	animation-name: icolor-accept;
+	animation-duration: 1.5s;
+	animation-fill-mode: forwards;
+}
+@keyframes icolor-accept { 100% {background-color: #0ca00c; } }
+@keyframes icolor-reject { 100% {background-color: #ca3d11; } }
 
 .login-button {
 	padding: 10px;
